; ModuleID = '/home/carl/AnghaBench/reactos/drivers/crypto/ksecdd/extr_dispatch.c_KsecQueryVolumeInformation.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/crypto/ksecdd/extr_dispatch.c_KsecQueryVolumeInformation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32 }

@FileFsDeviceInformation = common dso_local global i64 0, align 8
@STATUS_INVALID_INFO_CLASS = common dso_local global i32 0, align 4
@STATUS_INFO_LENGTH_MISMATCH = common dso_local global i32 0, align 4
@FILE_DEVICE_NULL = common dso_local global i32 0, align 4
@STATUS_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64, i32*)* @KsecQueryVolumeInformation to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @KsecQueryVolumeInformation(i64 %0, i64 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_2__*, align 8
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = load i64, i64* %6, align 8
  %10 = load i64, i64* @FileFsDeviceInformation, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %3
  %13 = load i32, i32* @STATUS_INVALID_INFO_CLASS, align 4
  store i32 %13, i32* %4, align 4
  br label %32

14:                                               ; preds = %3
  %15 = load i32*, i32** %7, align 8
  %16 = load i32, i32* %15, align 4
  %17 = sext i32 %16 to i64
  %18 = icmp ult i64 %17, 4
  br i1 %18, label %19, label %22

19:                                               ; preds = %14
  %20 = load i32*, i32** %7, align 8
  store i32 4, i32* %20, align 4
  %21 = load i32, i32* @STATUS_INFO_LENGTH_MISMATCH, align 4
  store i32 %21, i32* %4, align 4
  br label %32

22:                                               ; preds = %14
  %23 = load i64, i64* %5, align 8
  %24 = inttoptr i64 %23 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %24, %struct.TYPE_2__** %8, align 8
  %25 = load i32, i32* @FILE_DEVICE_NULL, align 4
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 1
  store i32 %25, i32* %27, align 8
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 0
  store i64 0, i64* %29, align 8
  %30 = load i32*, i32** %7, align 8
  store i32 4, i32* %30, align 4
  %31 = load i32, i32* @STATUS_SUCCESS, align 4
  store i32 %31, i32* %4, align 4
  br label %32

32:                                               ; preds = %22, %19, %12
  %33 = load i32, i32* %4, align 4
  ret i32 %33
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
